--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 *{box-sizing: border-box;}
 
-body{ background-color: pink;}
+body {
+    margin: 0;
+    padding: 0;
+    background-color: pink;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
 
 header {
     width: 100%;
@@ -145,12 +152,22 @@ header {
 .words {
     color: black;
     text-align:center;
-    padding: 3px 0;
     font-family: Arial, sans-serif; /* change to your chosen font */
     font-size: 18px;
-    
+    position:relative;
+    padding: 1px;
+    bottom: -10px;
+    background-color: lightcoral;
+    height: 40px;   
 }
 
+.content-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 30px;
+}
 .left-panel {
     width: 50%;
     float: left;
@@ -165,17 +182,20 @@ header {
     height: auto;
     vertical-align:top;
     position: relative;
-    left: 110px;
+    left: 120px;
     margin-top: 25px;
+    top: -20px;
 }
 
 .jump-cover {
-    width: 220px;
+    display: stretch;
+    width: 270px;
     height: auto;
-    margin-right: 70px;
-    margin-top: 160px;
+    margin-right: 100px;
+    margin-top: 10px;
+    top: -20px;
     position: relative;
-    left: -150px;
+    left: 120px;
 }
 
 .date {
@@ -183,21 +203,101 @@ header {
     text-align: start;
     font-family: Arial, sans-serif; /* change to your chosen font */
     color: black;
-    margin-top: 15px;
+    bottom: 50px;
     position:relative;
-    left: 170px;
+    left: 180px;
 }
 
 .jump {
-    bottom: 440px;
     position:relative;
-    left: 500px;
-    height: 400px
+    right: 100px;
+    height: 460px;
+    width: 1300px;
+    margin-top: 40px;
 }
 
-body {
-    margin: 0; 
-    padding: 0;
+.about-title {
+    font-family: Arial, sans-serif; /* change to your chosen font */
+    font-size: 28px;
+    text-align: center;
+    margin-top: 30px;
+    color: black;
+    position:relative;
+    top: -15px;
+}
+
+.jisoo-photo {
+    border-radius: 10px;
+    margin: 10px;
+    position: relative;
+    top: -40px;
+    height: 400px;
+    left: 100px;
+}
+.jennie-photo {
+    border-radius: 10px;
+    margin: 10px;
+    position: relative;
+    top: 60px;
+    height: 400px;
+    left: 150px;
+}
+
+.rose-photo {
+    border-radius: 10px;
+    margin: 10px;
+    position: relative;
+    top: 60px;
+    height: 400px;
+    left: 200px;
+}
+.lisa-photo {
+    border-radius: 10px;
+    margin: 10px;
+    position: relative;
+    top: -40px;
+    height: 400px;
+    right: -260px;
+}
+
+.name {
+    display: flex;
+    justify-content:flex-start;
+}
+.jisoo {
+    font-family: Arial, sans-serif; /* change to your chosen font */
+    font-size: 20px;
+    color: black;
+    position: relative;
+    bottom: 60px;
+    left: 190px;
+} 
+
+.jennie {
+    font-family: Arial, sans-serif; /* change to your chosen font */
+    font-size: 20px;
+    color: black;
+    position: relative;
+    bottom: 410px;
+    left: 450px;
+}
+
+.rose{
+    font-family: Arial, sans-serif; /* change to your chosen font */
+    font-size: 20px;
+    color: black;
+    position: relative;
+    bottom: 410px;
+    left: 700px;
+}
+
+.lisa {
+    font-family: Arial, sans-serif; /* change to your chosen font */
+    font-size: 20px;
+    color: black;
+    position: relative;
+    bottom: 60px;
+    left: 980px;
 }
 
 @media (max-width: 768px) {
