--- a/style.css
+++ b/style.css
@@ -607,6 +607,59 @@ header {
     /* makes the button click-through */
 }
 
+.discography-title {
+    font-family: Arial, sans-serif;
+    /* change to your chosen font */
+    font-size: 28px;
+    text-align: center;
+    margin-top: 30px;
+    color: black;
+    position: relative;
+    top: -15px;
+}
+.discography-grid {
+display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 70px;
+    max-width: 1400px; 
+    margin: 0 auto;
+    padding: 30px;
+    margin-top: 10px;
+    justify-items: center;
+    margin-bottom: -100px;
+}
+.album {
+    text-align: center;
+    font-size: 28px;
+    width: 350px;
+    margin: 0 auto;
+}
+
+.album-photo {
+    width: 350px;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 5px;
+    border: 2px solid #ddd;
+}
+
+.button {
+    display: inline-block;
+    margin-top: 40px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    color: darkorchid;
+    border-radius: 5px;
+    text-decoration: none;
+    position: relative;
+    bottom: 2140px;
+    left: 1300px;
+    border: none;
+}
+
+
+
 
 @media (max-width: 768px) {
     .logo-container {
