--- a/style.css
+++ b/style.css
@@ -567,6 +567,7 @@ header {
     width: 500px;
     top: -10px;
 }
+
 .lisa-right {
     font-family: Arial, sans-serif;
     /* change to your chosen font */
@@ -617,17 +618,19 @@ header {
     position: relative;
     top: -15px;
 }
+
 .discography-grid {
-display: grid;
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 70px;
-    max-width: 1400px; 
+    max-width: 1400px;
     margin: 0 auto;
     padding: 30px;
     margin-top: 10px;
     justify-items: center;
     margin-bottom: -50px;
 }
+
 .album {
     text-align: center;
     font-size: 28px;
@@ -658,6 +661,129 @@ display: grid;
     border: none;
 }
 
+.song-container {
+    display: flex;         
+    gap: 30px;             
+    align-items: flex-start;
+    flex-wrap: wrap;       
+    margin: 40px;
+}
+
+.music-title {
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: 26px;
+    margin-top: 20px;
+    gap: 10px;
+    justify-content: flex-start;
+    color: black;
+    left: 50px;
+    position: relative;
+}
+
+.music-title .number {
+    font-size: 45px;
+    font-weight: 400;
+    margin: 0 10px;
+    line-height: 0.7;
+    /* keeps it aligned */
+    display: inline-block;
+}
+
+.m1-next-button {
+    position: relative;
+    bottom: 225px;
+    left: 1350px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    /* or any color */
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
+
+.m1-back-button {
+    position: relative;
+    top: 120px;
+    left: 1350px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
+
+.song-title-box {
+    background-color: darkred;
+    padding: 10px 10px;
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+    color: white;
+    border: 1px solid #ccc;
+    display: inline-block;
+    border-radius: 5px;
+    align-items: center;
+    position: relative;
+    width: 300px;
+    height: 100px;
+    bottom: 120px;
+    left: 5px;
+}
+
+.description {
+    background-color: whitesmoke;
+    padding: 20px 20px;
+    font-size: 28px;
+    font-family: Arial, sans-serif;
+    border-radius: 5px;
+    display: inline-block; 
+    margin-top: 10px; 
+    text-align: left; 
+    box-sizing: border-box;
+    width: 300px;
+    height: 200px;
+    position: relative;
+    right: 300px;
+    top: 120px;
+}
+
+
+.song-info {
+    flex: 1;               
+    min-width: 400px;      
+}
+
+.kill-this-love-container {
+    flex: 1;               
+    max-width: 1000px;      
+    position: relative;
+    right: 160px;
+    height: 370px;
+    
+}
+
+.kill-this-love-video {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    height: 420px;       
+    bottom: 20px;
+    position: relative;
+    bottom: 50px;
+}
+
+.play-button {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+    color: white;
+    text-shadow: 0px 0px 15px black;
+    pointer-events: none;
+}
 
 
 
