--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ header {
 
 .m1-back-button {
     position: relative;
-    top: 120px;
+    top: 70px;
     left: 1350px;
     padding: 10px 20px;
     font-size: 18px;
@@ -726,8 +726,8 @@ header {
     border-radius: 5px;
     align-items: center;
     position: relative;
-    width: 300px;
-    height: 100px;
+    width: 305px;
+    height: 110px;
     bottom: 120px;
     left: 5px;
 }
@@ -743,7 +743,7 @@ header {
     text-align: left; 
     box-sizing: border-box;
     width: 300px;
-    height: 200px;
+    height: 250px;
     position: relative;
     right: 300px;
     top: 120px;
@@ -785,7 +785,48 @@ header {
     pointer-events: none;
 }
 
+.m2-next-button {
+    position: relative;
+    bottom: 257px;
+    left: 1350px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    /* or any color */
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
 
+.m2-back-button {
+    position: relative;
+    top: 70px;
+    left: 1350px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
+.how-you-like-that-container {
+    flex: 1;               
+    max-width: 1000px;      
+    position: relative;
+    right: 160px;
+    height: 370px;
+    
+}
+
+.how-you-like-that-video {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    height: 420px;       
+    bottom: 20px;
+    position: relative;
+    bottom: 50px;
+}
 
 @media (max-width: 768px) {
     .logo-container {
