done music4 page

--- a/style.css
+++ b/style.css
@@ -662,10 +662,10 @@ header {
 }
 
 .song-container {
-    display: flex;         
-    gap: 30px;             
+    display: flex;
+    gap: 30px;
     align-items: flex-start;
-    flex-wrap: wrap;       
+    flex-wrap: wrap;
     margin: 40px;
 }
 
@@ -692,7 +692,7 @@ header {
 
 .m1-next-button {
     position: relative;
-    bottom: 225px;
+    bottom: 100px;
     left: 1350px;
     padding: 10px 20px;
     font-size: 18px;
@@ -705,8 +705,8 @@ header {
 
 .m1-back-button {
     position: relative;
-    top: 70px;
-    left: 1350px;
+    top: 120px;
+    left: 1050px;
     padding: 10px 20px;
     font-size: 18px;
     background-color: white;
@@ -724,13 +724,13 @@ header {
     border: 1px solid #ccc;
     display: inline-block;
     border-radius: 5px;
-    align-items: center;
-    position: relative;
     width: 305px;
-    height: 110px;
-    bottom: 120px;
-    left: 5px;
+    margin-left: 40px;
+    top: 10px;
+    position: relative;
+    bottom: 130px;
 }
+
 
 .description {
     background-color: whitesmoke;
@@ -738,40 +738,41 @@ header {
     font-size: 28px;
     font-family: Arial, sans-serif;
     border-radius: 5px;
-    display: inline-block; 
-    margin-top: 10px; 
-    text-align: left; 
+    display: inline-block;
+    margin-top: 10px;
+    text-align: left;
     box-sizing: border-box;
     width: 300px;
-    height: 250px;
+    height: 260px;
     position: relative;
-    right: 300px;
-    top: 120px;
+    bottom: -30px;
+    left: 135px;
+
 }
 
 
 .song-info {
-    flex: 1;               
-    min-width: 400px;      
+    flex: 1;
+    min-width: 400px;
 }
 
 .kill-this-love-container {
-    flex: 1;               
-    max-width: 1000px;      
+    flex: 1;
+    max-width: 1000px;
     position: relative;
     right: 160px;
     height: 370px;
-    
+
 }
 
 .kill-this-love-video {
     width: 100%;
     border-radius: 10px;
     display: block;
-    height: 420px;       
+    height: 420px;
     bottom: 20px;
     position: relative;
-    bottom: 50px;
+    bottom: 30px;
 }
 
 .play-button {
@@ -787,7 +788,7 @@ header {
 
 .m2-next-button {
     position: relative;
-    bottom: 257px;
+    bottom: 130px;
     left: 1350px;
     padding: 10px 20px;
     font-size: 18px;
@@ -800,8 +801,8 @@ header {
 
 .m2-back-button {
     position: relative;
-    top: 70px;
-    left: 1350px;
+    top: 100px;
+    left: 1050px;
     padding: 10px 20px;
     font-size: 18px;
     background-color: white;
@@ -809,28 +810,28 @@ header {
     border: none;
     border-radius: 5px;
 }
+
 .how-you-like-that-container {
-    flex: 1;               
-    max-width: 1000px;      
+    flex: 1;
+    max-width: 1000px;
     position: relative;
     right: 160px;
     height: 370px;
-    
 }
 
 .how-you-like-that-video {
     width: 100%;
     border-radius: 10px;
     display: block;
-    height: 420px;       
+    height: 420px;
     bottom: 20px;
     position: relative;
-    bottom: 50px;
+    bottom: 30px;
 }
 
 .m3-next-button {
     position: relative;
-    bottom: 225px;
+    bottom: 100px;
     left: 1350px;
     padding: 10px 20px;
     font-size: 18px;
@@ -843,8 +844,8 @@ header {
 
 .m3-back-button {
     position: relative;
-    top: 70px;
-    left: 1350px;
+    top: 120px;
+    left: 1050px;
     padding: 10px 20px;
     font-size: 18px;
     background-color: white;
@@ -852,23 +853,68 @@ header {
     border: none;
     border-radius: 5px;
 }
+
 .pink-venom-container {
-    flex: 1;               
-    max-width: 1000px;      
+    flex: 1;
+    max-width: 1000px;
     position: relative;
     right: 160px;
     height: 370px;
-    
+
 }
 
 .pink-venom-video {
     width: 100%;
     border-radius: 10px;
     display: block;
-    height: 420px;       
+    height: 420px;
     bottom: 20px;
     position: relative;
-    bottom: 50px;
+    bottom: 30px;
+}
+
+.m4-next-button {
+    position: relative;
+    bottom: 100px;
+    left: 1350px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    /* or any color */
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
+
+.m4-back-button {
+    position: relative;
+    top: 100px;
+    left: 1050px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: white;
+    color: darkorchid;
+    border: none;
+    border-radius: 5px;
+}
+
+.shut-down-container {
+    flex: 1;
+    max-width: 1000px;
+    position: relative;
+    right: 160px;
+    height: 370px;
+
+}
+
+.shut-down-video {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    height: 420px;
+    bottom: 20px;
+    position: relative;
+    bottom: 30px;
 }
 
 @media (max-width: 768px) {
