--- a/style.css
+++ b/style.css
@@ -952,16 +952,18 @@ header {
 }
 
 .tour-row {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     padding: 15px 0;
     border-bottom: 1px solid #ccc;
     font-size: 15px;
 }
-.country{
+
+.country {
     font-size: 28px;
 }
-.dates{
+
+.dates {
     font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
     margin-left: 300px;
@@ -970,6 +972,7 @@ header {
     display: flex;
 
 }
+
 /* --- BUTTONS --- */
 .status {
     padding: 7px 14px;
@@ -981,9 +984,43 @@ header {
     margin-left: auto;
     width: 110px;
     margin-right: -30px;
-    
+
 
 }
+
+.contact-title {
+    font-family: Arial, sans-serif;
+    font-size: 28px;
+    text-align: center;
+    margin-top: 30px;
+    color: black;
+    position: relative;
+    top: -15px;
+}
+
+.contact-columns{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 40px;
+    gap: 40px;
+}
+.contact-info {
+    flex: 1;
+    text-align: start;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    margin-top: 10px;
+    color: black;
+    margin-left: 30px;
+}
+.operating-hours{
+    font-size: 25px;
+}
+.contact-form{
+    width: 40px;
+    display:
+}
+
 
 @media (max-width: 768px) {
     .logo-container {
