--- a/style.css
+++ b/style.css
@@ -1002,23 +1002,68 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 20px 40px;
-    gap: 40px;
+    align-items: flex-start;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-top: -15px;
 }
 .contact-info {
     flex: 1;
     text-align: start;
     font-family: Arial, sans-serif;
     font-size: 20px;
-    margin-top: 10px;
+    margin-top: 100px;
     color: black;
     margin-left: 30px;
+    min-width: 300px;
+    padding: 20px;
+    border-radius: 10px;
 }
 .operating-hours{
     font-size: 25px;
+    margin-top: 20px;
 }
 .contact-form{
-    width: 40px;
-    display:
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: -30px;
+}
+.input_name,.input_email, .input_number,.input_message{
+    width: 100%;
+    background: powderblue;
+    border: none;
+    padding:10px;
+}
+.input_message {
+    height: 70px;
+    resize: none;
+}
+.submit-btn {
+    width: 40%;
+    align-self: center;
+    background: powderblue;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+}
+.group-image {
+    flex: 1;
+    min-width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+}
+.group-image img {
+    width: 100%;    
+    min-width: 280px;        
+    aspect-ratio: 1 / 1;    
+    object-fit: cover;      
+    display: block;
+    margin: 0 auto;
+    border-radius: 8px
 }
 
 
